<resources>
    <string name="app_name">IPS</string>
    <string name="info1">Initial Location</string>
    <string name="start_button">Start</string>
    <string name="info2">Angle</string>
    <string name="info3">Distance</string>
    <string name="info4">Steps</string>
    <string name="info5">Current Location</string>
    <string name="stop_button">STOP</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="map_button">Map</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
</resources>
